# jshoes-claude-plugins

./: .gitignore  CLAUDE-global.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  settings.json  setup.sh  test_improvement_plan.md  test_review_report.md
.claude/: CLAUDE.md  settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: README.md  auto-unsandbox-pbcopy.py  block-heredoc-in-bash.py  detect-cd-pattern.py  detect-heredoc-errors.py  ensure-tmpdir.py  gh-authorship-attribution.py  gh-fallback-helper.py  gh-web-fallback.py  gpg-signing-helper.py  markdown-commit-reminder.py  monitor-ci-results.py  normalize-line-endings.py  prefer-gh-for-own-repos.py  prefer-modern-tools.py  reset-attribution-session.py  run-with-fallback.sh  suggest-uv-for-missing-deps.py
.github/workflow-templates/: sync-claude-config.yml  sync-claude-plugins.yml
.github/workflows/: ci.yml  version-check.yml
hooks/: README.md  auto-unsandbox-pbcopy.py  detect-cd-pattern.py  detect-heredoc-errors.py  gpg-signing-helper.py  normalize-line-endings.py  prefer-gh-for-own-repos.py  prefer-modern-tools.py  suggest-uv-for-missing-deps.py
hooks/tests/: .gitignore  run_tests.py  test_auto_unsandbox_pbcopy.py  test_detect_cd_pattern.py  test_detect_heredoc_errors.py  test_gh_fallback_helper.py  test_gh_web_fallback.py  test_gpg_signing_helper.py  test_normalize_line_endings.py  test_prefer_gh_for_own_repos.py  test_prefer_modern_tools.py  test_suggest_uv_for_missing_deps.py
plugins/: installed_plugins.json
plugins/alfred-workflow/: CHANGELOG.md  README.md
(+106 files in other folders)
